MacViews: Treat Ctrl+LeftClick as RightClick on Mac.

Alters EventFlagsFromNSEventWithModifiers to check for Ctrl in the
NSEvent modifierFlags and make a left click a right click. Removes the
Ctrl modifier in such cases.

Mac lets you disable "secondary click" completely in Trackpad settings,
which leaves Ctrl+Click as the only way to "right"-click, so we should
support this. There isn't a system setting that disables Ctrl+Click.

Apart from MacViews, EventFlagsFromNSEventWithModifiers is currently
used by the browser back button and (when DevTools is attached) the
reload button, but only for feeding modifiers to
ui::MenuModel::ActivatedAt(index, flags). They use
ui::DispositionFromEventFlags(..) which only cares about middle-clicks
(and -for Mac- the Command modifier, which isn't altered by this CL) so
there's no behaviour change for Cocoa with this CL.

The browser back button itself (a ClickHoldButtonCell) still doesn't
respect Ctrl+LeftClick (http://crbug.com/616357). But that's orthogonal.

BUG=616650

Review-Url: https://codereview.chromium.org/2025943003
Cr-Commit-Position: refs/heads/master@{#397606}

Former-commit-id: 44b884f03bc32c8e891e80122e07d51595dd4b73